# Minima

./: Info.plist  find_dependencies.py  meson.build
docs/: index.html  version.json
minima.app/Contents/Frameworks/: libcairo.2.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libglib-2.0.0.dylib  libgraphite2.3.dylib  libharfbuzz.0.dylib  libintl.8.dylib  libpcre.1.dylib  libpixman-1.0.dylib  libpng16.16.dylib
minima.app/Contents/MacOS/: launch.sh  minima
minima.app/Contents/Resources/: metadata.json
src/: AppDelegate.h  AppDelegate.mm  AutoUpdate.h  CairoView.h  CairoView.mm  ViewController.h  ViewController.mm  launch.sh  main.mm
